--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="huise">#7C7A7A</color>
+    <color name="blue_menu">#0970FF</color>
+    <color name="grey_menu">#929292</color>
     <color name="white">#FFFFFFFF</color>
+
 </resources>
