--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,15 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_item_home"
         android:icon="@drawable/ic_home_24"
         android:title="首页" />
     <item
+        android:id="@+id/menu_item_study"
         android:icon="@drawable/ic_book_24"
         android:title="学习" />
     <item
+        android:id="@+id/menu_item_repair"
         android:icon="@drawable/ic_gear_24"
         android:title="报修" />
     <item
+        android:id="@+id/menu_item_mine"
         android:icon="@drawable/ic_person_24"
         android:title="我的" />
 </menu>
