--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/huise_200"
     tools:context=".fragments.HomeFragment">
 
     <ScrollView
@@ -38,6 +39,7 @@
                     android:layout_weight="1" />
 
                 <ImageView
+                    android:id="@+id/msg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
@@ -65,6 +67,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/yuan1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/ic_circle1"
@@ -92,6 +95,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/yuan2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/ic_circle2"
@@ -119,6 +123,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/yuan3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/ic_circle3"
@@ -146,6 +151,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/yuan4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@drawable/ic_circle4"
@@ -173,6 +179,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/fang1"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -224,6 +231,7 @@
                     android:layout_height="match_parent" />
 
                 <LinearLayout
+                    android:id="@+id/fang2"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -269,26 +277,20 @@
 
 
                 </LinearLayout>
-                <!--                <ImageView-->
-                <!--                    android:src="@drawable/fang_ic1"-->
-                <!--                    android:background="@drawable/fang_bg1"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:paddingLeft="10dp"-->
-                <!--                    />-->
 
             </LinearLayout>
 <!--            政策法规栏-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/white"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="24dp"
                 android:orientation="vertical">
                 <LinearLayout
+                    android:background="@color/huise_200"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    >
+                    android:layout_height="wrap_content">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -300,6 +302,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"/>
                     <TextView
+                        android:id="@+id/zc_more"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="更多"
@@ -309,10 +312,12 @@
                         android:textSize="14sp"/>
                 </LinearLayout>
                 <ListView
+                    android:id="@+id/lv_zc"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="200dp"
+                    android:divider="#d9d9d9"
+                    android:dividerHeight="1dp"/>
 
-                </ListView>
             </LinearLayout>
 
 
