--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -205,7 +205,7 @@
                             android:layout_height="0dp"
                             android:layout_weight="1"
                             android:gravity="bottom"
-                            android:text="装备报修"
+                            android:text="维修预约"
                             android:textColor="@color/white"
                             android:textSize="16sp"
 
@@ -216,7 +216,7 @@
                             android:layout_height="0dp"
                             android:layout_weight="1"
                             android:gravity="top"
-                            android:text="故障信息提报"
+                            android:text="装备维修预约"
                             android:textColor="@color/white"
                             android:textSize="14sp"
                             android:textStyle="bold" />
@@ -317,7 +317,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:divider="#d9d9d9"
-                    android:dividerHeight="1dp"/>
+                    android:dividerHeight="0dp"/>
 
             </LinearLayout>
 
