--- a/app/src/main/res/drawable/edittext_style.xml
+++ b/app/src/main/res/drawable/edittext_style.xml
@@ -4,6 +4,6 @@
     <solid android:color="#FFFFFF" />  <!-- 填充颜色 -->
     <stroke
         android:width="1dp"
-        android:color="@color/blue_menu" />     <!-- 边框颜色 -->
+        android:color="#D6E8FA" />     <!-- 边框颜色 -->
     <corners android:radius="5dp" />  <!-- 边框圆角 -->
 </shape>
