--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RepairActivity">
+    tools:context=".SupportActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,110 +22,101 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingEnd="40dp"
-            android:text="预约维修"
-            android:textSize="24sp"
             android:gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/white"/>
+            android:paddingEnd="40dp"
+            android:text="技术支援"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="20dp"
             android:orientation="vertical">
-<!--            装备信息-->
+            <!--            装备信息-->
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="12dp"
-                android:rowCount="5"
+                android:background="@drawable/edittext_father_style"
                 android:columnCount="2"
-                android:background="@drawable/edittext_father_style">
+                android:rowCount="5">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_column="0"
                     android:layout_row="0"
+                    android:layout_column="0"
                     android:layout_columnSpan="2"
                     android:paddingVertical="10dp"
                     android:paddingLeft="10dp"
-                    android:text="装备信息"
+                    android:text="基本信息"
                     android:textSize="22sp"
                     android:textStyle="bold" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="10dp"
-                    android:paddingLeft="10dp"
-                    android:layout_column="0"
-                    android:layout_row="1"
-                    android:textSize="20sp"
-                    android:text="名    称："
-                    android:gravity="left"/>
-
-                <EditText
-                    android:layout_width="260dp"
-                    android:layout_height="wrap_content"
-                    android:layout_row="1"
-                    android:layout_column="1"
-                    android:background="@drawable/edittext_style"
-                    android:paddingVertical="5dp" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="10dp"
-                    android:paddingLeft="10dp"
-                    android:layout_column="0"
-                    android:layout_row="2"
-                    android:textSize="20sp"
-                    android:text="型    号："
-                    android:gravity="left"/>
-                <EditText
-                    android:layout_width="260dp"
-                    android:layout_height="wrap_content"
-                    android:layout_column="1"
-                    android:layout_row="2"
-                    android:background="@drawable/edittext_style"
-                    android:paddingVertical="5dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_row="1"
+                    android:layout_column="0"
+                    android:gravity="left"
                     android:paddingVertical="10dp"
                     android:paddingLeft="10dp"
-                    android:layout_column="0"
+                    android:text="日    期："
+                    android:textSize="20sp" />
+
+
+                <EditText
+                    android:id="@+id/date_edit"
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:layout_row="1"
+                    android:layout_column="1"
+                    android:inputType="date"
+                    android:background="@drawable/edittext_style"
+                    android:hint="请选择开始支援的日期"
+                    android:paddingVertical="5dp" />
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_row="3"
-                    android:textSize="20sp"
-                    android:text="所在地："
-                    android:gravity="left"/>
+                    android:layout_column="0"
+                    android:gravity="left"
+                    android:paddingVertical="10dp"
+                    android:paddingLeft="10dp"
+                    android:text="地    址："
+                    android:textSize="20sp" />
+
                 <LinearLayout
                     android:layout_width="260dp"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_column="1"
                     android:layout_row="3"
+                    android:layout_column="1"
+                    android:orientation="horizontal"
                     android:paddingVertical="5dp">
+
                     <Spinner
                         android:id="@+id/sp1"
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:background="@drawable/edittext_style"
-                        />
+                        android:layout_weight="1"
+                        android:background="@drawable/edittext_style" />
+
                     <Spinner
                         android:id="@+id/sp2"
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="match_parent"
-                        android:background="@drawable/edittext_style"
-                        />
+                        android:layout_weight="1"
+                        android:background="@drawable/edittext_style" />
                 </LinearLayout>
-
 
 
                 <EditText
@@ -138,67 +129,68 @@
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/edittext_style"
                     android:gravity="top"
-                    android:minLines="3"
                     android:hint="详细地址："
-                    />
+                    android:minLines="3" />
             </GridLayout>
-<!--            故障现象-->
+            <!--            故障现象-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="12dp"
-                android:orientation="vertical"
-                android:background="@drawable/edittext_father_style">
+                android:background="@drawable/edittext_father_style"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingVertical="10dp"
                     android:paddingStart="10dp"
-                    android:text="故障描述"
+                    android:text="支援事项"
                     android:textSize="22sp"
                     android:textStyle="bold" />
+
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:minLines="5"
-                    android:gravity="top"
-                    android:background="@drawable/edittext_style"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="20dp"
-                    android:hint="描述故障现象：" />
-                </LinearLayout>
+                    android:background="@drawable/edittext_style"
+                    android:gravity="top"
+                    android:hint="描述需要支援的具体事项，涉及的装备等："
+                    android:minLines="5" />
+            </LinearLayout>
 
             <GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="12dp"
-                android:rowCount="4"
+                android:background="@drawable/edittext_father_style"
                 android:columnCount="2"
-                android:background="@drawable/edittext_father_style">
+                android:rowCount="4">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_column="0"
                     android:layout_row="0"
+                    android:layout_column="0"
                     android:layout_columnSpan="2"
                     android:paddingVertical="10dp"
                     android:paddingLeft="10dp"
                     android:text="联系人"
                     android:textSize="22sp"
                     android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_row="1"
+                    android:layout_column="0"
+                    android:gravity="left"
                     android:paddingVertical="10dp"
                     android:paddingLeft="10dp"
-                    android:layout_column="0"
-                    android:layout_row="1"
-                    android:textSize="20sp"
                     android:text="姓    名："
-                    android:gravity="left"/>
+                    android:textSize="20sp" />
 
                 <EditText
                     android:layout_width="260dp"
@@ -207,54 +199,56 @@
                     android:layout_column="1"
                     android:background="@drawable/edittext_style"
                     android:paddingVertical="5dp" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_row="2"
+                    android:layout_column="0"
+                    android:gravity="left"
                     android:paddingVertical="10dp"
                     android:paddingLeft="10dp"
-                    android:layout_column="0"
-                    android:layout_row="2"
-                    android:textSize="20sp"
                     android:text="电    话："
-                    android:gravity="left"/>
+                    android:textSize="20sp" />
+
                 <EditText
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
-                    android:layout_column="1"
                     android:layout_row="2"
+                    android:layout_column="1"
                     android:background="@drawable/edittext_style"
                     android:paddingVertical="5dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingBottom="20dp"
-                    android:layout_column="0"
                     android:layout_row="3"
-                    android:textSize="20sp"
+                    android:layout_column="0"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="20dp"
                     android:text="单    位："
-                    android:gravity="left"/>
+                    android:textSize="20sp" />
+
                 <EditText
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
-                    android:layout_column="1"
                     android:layout_row="3"
+                    android:layout_column="1"
                     android:background="@drawable/edittext_style"
                     android:paddingVertical="5dp" />
             </GridLayout>
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
-                android:textSize="20dp"
                 android:background="@drawable/edittext_father_style"
-                android:text="提    交"/>
+                android:text="提    交"
+                android:textSize="20dp" />
         </LinearLayout>
     </ScrollView>
-
-
 
 
 </LinearLayout>
