--- a/app/src/main/res/layout/activity_repair.xml
+++ b/app/src/main/res/layout/activity_repair.xml
@@ -69,6 +69,7 @@
                     android:gravity="left"/>
 
                 <EditText
+                    android:id="@+id/equipment"
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
                     android:layout_row="1"
@@ -86,6 +87,7 @@
                     android:text="型    号："
                     android:gravity="left"/>
                 <EditText
+                    android:id="@+id/type"
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
                     android:layout_column="1"
@@ -129,6 +131,7 @@
 
 
                 <EditText
+                    android:id="@+id/address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_row="4"
@@ -159,6 +162,7 @@
                     android:textSize="22sp"
                     android:textStyle="bold" />
                 <EditText
+                    android:id="@+id/falut"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:minLines="5"
@@ -174,7 +178,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="12dp"
-                android:rowCount="4"
+                android:rowCount="5"
                 android:columnCount="2"
                 android:background="@drawable/edittext_father_style">
 
@@ -201,6 +205,7 @@
                     android:gravity="left"/>
 
                 <EditText
+                    android:id="@+id/contact"
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
                     android:layout_row="1"
@@ -218,6 +223,8 @@
                     android:text="电    话："
                     android:gravity="left"/>
                 <EditText
+                    android:id="@+id/phone"
+                    android:inputType="phone"
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
                     android:layout_column="1"
@@ -228,23 +235,43 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
                     android:paddingLeft="10dp"
-                    android:paddingBottom="20dp"
+                    android:paddingVertical="10dp"
                     android:layout_column="0"
                     android:layout_row="3"
                     android:textSize="20sp"
                     android:text="单    位："
                     android:gravity="left"/>
                 <EditText
+                    android:id="@+id/unit"
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
                     android:layout_column="1"
                     android:layout_row="3"
                     android:background="@drawable/edittext_style"
                     android:paddingVertical="5dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="20dp"
+                    android:layout_column="0"
+                    android:layout_row="4"
+                    android:textSize="20sp"
+                    android:text="备    注："
+                    android:gravity="left"/>
+                <EditText
+                    android:id="@+id/notes"
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:layout_column="1"
+                    android:layout_row="4"
+                    android:background="@drawable/edittext_style"
+                    android:paddingVertical="5dp" />
             </GridLayout>
             <Button
+                android:id="@+id/submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
