--- a/app/src/main/res/layout/fragment_repair.xml
+++ b/app/src/main/res/layout/fragment_repair.xml
@@ -29,12 +29,13 @@
         android:layout_margin="20dp"
         android:src="@drawable/xuan1"
         android:scaleType="center"/>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:orientation="vertical">
 <!--            滑动内容区-->
             <LinearLayout
@@ -72,12 +73,18 @@
 
 
             </LinearLayout>
-            <ListView
-                android:id="@+id/list_repair"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                />
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical">
+                <ListView
+                    android:id="@+id/list_repair"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="20dp"
+                    />
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
