--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -120,6 +120,7 @@
 
 
                 <EditText
+                    android:id="@+id/address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_row="4"
@@ -150,6 +151,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/thing"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -167,7 +169,7 @@
                 android:layout_marginVertical="12dp"
                 android:background="@drawable/edittext_father_style"
                 android:columnCount="2"
-                android:rowCount="4">
+                android:rowCount="5">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -193,6 +195,7 @@
                     android:textSize="20sp" />
 
                 <EditText
+                    android:id="@+id/contact"
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
                     android:layout_row="1"
@@ -212,6 +215,7 @@
                     android:textSize="20sp" />
 
                 <EditText
+                    android:id="@+id/phone"
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
                     android:layout_row="2"
@@ -226,21 +230,42 @@
                     android:layout_column="0"
                     android:gravity="left"
                     android:paddingLeft="10dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="20dp"
+                    android:paddingVertical="10dp"
                     android:text="单    位："
                     android:textSize="20sp" />
 
                 <EditText
+                    android:id="@+id/unit"
                     android:layout_width="260dp"
                     android:layout_height="wrap_content"
                     android:layout_row="3"
                     android:layout_column="1"
                     android:background="@drawable/edittext_style"
                     android:paddingVertical="5dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_row="4"
+                    android:layout_column="0"
+                    android:gravity="left"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="20dp"
+                    android:text="备    注："
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/notes"
+                    android:layout_width="260dp"
+                    android:layout_height="wrap_content"
+                    android:layout_row="4"
+                    android:layout_column="1"
+                    android:background="@drawable/edittext_style"
+                    android:paddingVertical="5dp" />
             </GridLayout>
 
             <Button
+                android:id="@+id/submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
